# KernelAgent

./: .gitignore  CONTRIBUTING.md  README.md  e2e_test.py  pyproject.toml  triton_ui.py
.github/workflows/: ci.yml  ruff.yml
Fuser/: auto_agent.py  cli.py  compose_end_to_end.py  config.py  dispatch_kernel_agent.py  orchestrator.py  pipeline.py  subgraph_extractor.py  worker.py
scripts/: fuser_ui.py  list_models.py  pipeline_ui.py  triton_ui.py
tests/: test_autopatch.py  test_platform_config.py
triton_kernel_agent/: agent.py  manager.py  platform_config.py  prompt_manager.py  worker.py  worker_util.py
triton_kernel_agent/providers/: relay_provider.py
triton_kernel_agent/templates/: kernel_generation.j2  test_generation.j2  triton_guidelines.j2
utils/providers/: __init__.py  available_models.py  base.py  model_config.py  models.py  relay_provider.py
